--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,9 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-upload_port = COM8
+upload_port = COM5
 upload_speed = 921600
+monitor_port = COM5
+monitor_speed = 9600
+build_flags = 
+    -DDEBUG
