--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,8 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-upload_port = COM5
+upload_port = /dev/ttyUSB1
 upload_speed = 921600
-monitor_port = COM5
+monitor_port = /dev/ttyUSB1
 monitor_speed = 9600
-build_flags = 
-    -DDEBUG
+build_flags = -DDEBUG
