--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,11 @@
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-upload_port = /dev/ttyUSB1
-upload_speed = 921600
 monitor_port = /dev/ttyUSB1
 monitor_speed = 9600
-build_flags = -DDEBUG
+build_flags = -DUDP_LOGGING ; -DOTA_UPDATES
+
+upload_port = /dev/ttyUSB1
+upload_speed = 921600
+;upload_protocol = espota
+;upload_port = 192.168.0.57
