Committing what I had in 2021

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,12 @@ board = nodemcu-32s
 framework = arduino
 monitor_port = /dev/ttyUSB1
 monitor_speed = 9600
-build_flags = -DUDP_LOGGING ; -DOTA_UPDATES
+build_flags = 
+; -DOTA_UPDATES
+; -DUDP_LOGGING
+; -DSERIAL_TIMEOUT
 
-upload_port = /dev/ttyUSB1
-upload_speed = 921600
-;upload_protocol = espota
-;upload_port = 192.168.0.57
+; upload_port = /dev/ttyUSB1
+; upload_speed = 921600
+upload_protocol = espota
+upload_port = 192.168.0.102
