--- a/platformio.ini
+++ b/platformio.ini
@@ -15,13 +15,13 @@ include_dir = src/synscancontrol
 platform = espressif32
 board = nodemcu-32s
 framework = arduino
-monitor_port = /dev/ttyUSB1
-monitor_speed = 9600
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
 build_flags = 
-; -DOTA_UPDATES
-; -DUDP_LOGGING
+ ; -DOTA_UPDATES
+ ; -DUDP_LOGGING
 
-; upload_port = /dev/ttyUSB1
-; upload_speed = 921600
-upload_protocol = espota
-upload_port = 192.168.0.102
+upload_port = /dev/ttyUSB0
+upload_speed = 921600
+;upload_protocol = espota
+;upload_port = 192.168.0.102  ; IP address, logged via serial by the firmware on WiFi connect
