Cleaned up logging. Made hardware logging optional

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ framework = arduino
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 build_flags = 
- ; -DOTA_UPDATES
+  -DSERIAL_DEBUG
+  -DOTA_UPDATES
  ; -DUDP_LOGGING
 
 upload_port = /dev/ttyUSB0
