Pin older version of espressif32

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,13 @@ src_dir = src
 include_dir = src/synscancontrol
 
 [env:nodemcu-32s]
-platform = espressif32 @ 6.9.0
+platform = espressif32 @ 3.5.0
 board = nodemcu-32s
 framework = arduino
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 build_flags = 
-  -DSERIAL_DEBUG
+  ; -DSERIAL_DEBUG
   ; -DOTA_UPDATES
   ; -DUDP_LOGGING
 
