Remembered why I had serial timeout configurable

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ framework = arduino
 monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 build_flags = 
-  ; -DSERIAL_DEBUG
+  ; -DSERIAL_TIMEOUT
+  -DSERIAL_DEBUG
   ; -DOTA_UPDATES
   ; -DUDP_LOGGING
 
