Elaborate on why I'm pinning a platform version

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,10 @@
 src_dir = src
 include_dir = src/synscancontrol
 
+; NOTE: I've noticed issues with the hardware interrupts not running
+; fast enough and causing crashes with espressif/arduino-core > v2.0
+; so I'm pinning the latest espressif32 platform version with the
+; older arduino-core version
 [env:nodemcu-32s]
 platform = espressif32 @ 3.5.0
 board = nodemcu-32s
