Got a handle on UDP logging and OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,11 +23,11 @@ monitor_port = /dev/ttyUSB0
 monitor_speed = 115200
 build_flags = 
   ; -DSERIAL_TIMEOUT
-  -DSERIAL_DEBUG
+  ; -DSERIAL_DEBUG
   ; -DOTA_UPDATES
   ; -DUDP_LOGGING
 
 upload_port = /dev/ttyUSB0
 upload_speed = 921600
-;upload_protocol = espota
-;upload_port = 192.168.0.102  ; IP address, logged via serial by the firmware on WiFi connect
+; upload_protocol = espota
+; upload_port = 192.168.0.123  ; IP address, logged via serial by the firmware on WiFi connect
